<resources>
    <string name="app_name">RunGo</string>
    <string name="play_challenge">Выбрать вызов</string>
    <string name="play_training">Без вызова</string>
    <string name="choose_clothes">Выбери одежду</string>
    <string name="custom_default">Снять</string>
    <string name="custom_check">Одеть</string>
    <string name="good_choice">Отличный выбор!</string>
    <string name="choose_challenge">Выбери вызов</string>
    <string name="get_award">получи</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="stats_this_week">эта неделя</string>
    <string name="stats_last_week">прошлая неделя</string>
    <string name="stats_this_month">этот месяц</string>
    <string name="stats_last_month">прошлый месяц</string>
    <string name="stats_this_year">этот год</string>
    <string name="stats_last_year">прошлый год</string>
    <string name="stats_distance">Расстояние\n(км)</string>
    <string name="stats_training">Тренировки</string>
    <string name="stats_avg_speed">Сред. скорость\n(км/ч)</string>
    <string name="distance">%.1f км</string>
    <string name="welcome_title">Давайте знакомиться</string>

    <string name="unknown_error_has_occured">Произошла неизвестная ошибка</string>
    <string name="no_internet_connection">Подключение к Интернету отсутствует</string>
    <string name="play_services_update_cancelled">Обновление Play Services прервано</string>
    <string name="developer_error">Ошибка разработчика</string>
    <string name="provider_error">Ошибка провайдера</string>
    <string name="user_account_merge_conflict">Конфликт с слиянием учетной записи пользователя</string>
    <string name="you_are_attempting_to_sign_in_a_different_email_than_previously_provided">Вы пытаетесь войти в другое электронное письмо, чем ранее</string>
    <string name="swipe_from_up_to_down">Свайпните сверху вниз</string>
    <string name="you_do_not_have_any_costume">Вы ещё не получили ни одного костюма :(</string>
    <string name="zero_time">00:00:00</string>

    <!-- Run -->
    <string name="run_distance_title">пройдено (км)</string>
    <string name="time_title">время</string>
    <string name="speed_title">тек. скорость</string>
    <string name="speed">%.1f км/ч</string>
    <string name="avg_speed_title">сред. скорость</string>
    <string name="avg_speed">%.1f км/ч</string>
    <string name="tab_run">бег</string>
    <string name="tab_map">карта</string>
    <string name="meter">м</string>
    <string name="notification_title">Пройдено:</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="impossible_to_continue">Продолжение работы невозможно</string>
    <string name="go_to_applications_settings_and_provide_permissions_to_location">Для дальнейшей работы необходимо перейти в настройки приложения и включить разрешение доступа к местоположению</string>
    <string name="go_to">Перейти</string>
    <string name="application_needs_permissions_to_location">Для дальнейшей работы приложению необходимы права доступа к местоположению</string>
    <string name="provide">Предоставить</string>
    <string name="retry">Повторить</string>
    <string name="internet_connection_required">Необходимо интернет соединение</string>
    <string name="user_must_sign_in">Пользователь должен войти в аккаунт</string>
    <string name="user">Пользователь</string>
    <string name="take_your_gift">Забери свой подарок!</string>
    <string name="try_once_more">Попробуй еще раз!</string>
    <string name="challenge_done">ВЫЗОВ ВЫПОЛНЕН!</string>
    <string name="challenge_good_job">МОЛОДЕЦ!</string>
    <string name="challenge_failed">ВЫЗОВ НЕ ВЫПОЛНЕН!</string>
</resources>
