<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tab_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/week"
            android:background="@drawable/stats_tab_background"/>

    <TextView
            android:id="@+id/tab_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/month"/>

    <TextView
            android:id="@+id/tab_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/year"/>
</LinearLayout>