<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/run_active_background">

    <LinearLayout
            android:id="@+id/timer_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="0:00"/>

        <TextView
                android:id="@+id/timer_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="5dp"
                android:textColor="#C07A3C"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="/"/>

        <TextView
                android:id="@+id/timer_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="5dp"
                android:textColor="#C07A3C"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="0:00"/>

    </LinearLayout>


    <TextView
            android:id="@+id/time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/timer_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/speed"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_title"
            app:layout_constraintEnd_toStartOf="@+id/average_speed_title"/>

    <TextView
            android:id="@+id/speed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_title"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/speed"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="@+id/speed"
            app:layout_constraintTop_toBottomOf="@+id/speed"/>

    <TextView
            android:id="@+id/average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/avg_speed"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_title"
            app:layout_constraintStart_toEndOf="@+id/speed"/>

    <TextView
            android:id="@+id/average_speed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_speed_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/average_speed"
            app:layout_constraintStart_toStartOf="@+id/average_speed"
            app:layout_constraintTop_toBottomOf="@+id/average_speed"/>

    <LinearLayout
            android:id="@+id/distance_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speed_title">

        <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0,0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/distance_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="/"
                android:textAlignment="center"
                android:textColor="#C07A3C"
                android:textSize="32sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/distance_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                tools:text="0,0"
                android:textAlignment="center"
                android:textColor="#C07A3C"
                android:textSize="32sp"
                android:textStyle="bold"/>

    </LinearLayout>

    <TextView
            android:id="@+id/distance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_distance_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/distance_layout"
            app:layout_constraintStart_toStartOf="@+id/distance_layout"
            app:layout_constraintTop_toBottomOf="@+id/distance_layout"/>

    <LinearLayout
            android:id="@+id/tab_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/distance_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/tab_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/tab_run"
                android:gravity="center"
                android:background="@drawable/ic_run_active"/>

        <TextView
                android:id="@+id/tab_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/tab_map"
                android:gravity="center"
                android:background="@drawable/ic_map_accent"/>

    </LinearLayout>

    <ImageView
            android:id="@+id/content_frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:srcCompat="@drawable/ic_content_frame"/>

    <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

    <com.myrungo.rungo.cat.CatView
            android:id="@+id/cat_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/content_frame"
            app:layout_constraintBottom_toBottomOf="@+id/content_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.8"/>

    <LinearLayout
            android:id="@+id/play_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_run_pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:background="@drawable/ic_run_stop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>