<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <TextView
            android:id="@+id/training_done_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_good_job"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="21dp"
            android:textColor="@color/run_active_background"/>

    <ImageView
            android:id="@+id/training_done_cat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleX="-1"
            android:src="@drawable/head_common_vector"
            app:layout_constraintDimensionRatio="6"
            app:layout_constraintTop_toBottomOf="@+id/training_done_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/done_result_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/run_active_background"
            app:layout_constraintTop_toBottomOf="@id/training_done_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="125dp"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:id="@+id/done_distance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/training_current_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0,0"
                    android:textColor="@color/white"
                    android:textSize="45sp"
                    android:textStyle="bold"/>
        </LinearLayout>

        <TextView
                android:id="@+id/done_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="километры"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/done_distance_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/training_done_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:textSize="45sp"
                app:layout_constraintTop_toBottomOf="@id/done_km"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/done_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/training_done_timer"/>

        <TextView
                android:id="@+id/training_current_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="32sp"
                android:text="0,0"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/done_time_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="36dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_title"
                app:layout_constraintTop_toBottomOf="@+id/training_current_speed"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/training_average_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0,0"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/done_time_title"
                android:layout_marginEnd="36dp"/>

        <TextView
                android:id="@+id/done_average_speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_speed_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/training_average_speed"
                android:layout_marginEnd="16dp"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/training_home_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                android:textColor="@color/run_active_background"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="Домой"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/done_content_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>